[package]
name = "bevy-voxel"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.7"
bevy_egui = "0.14"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-lite = "1.12"
simdnoise = "3.1.6"
